# SpaceAI

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_kr.md
.github/: CODEOWNERS
.github/workflows/: documentation.yml  rust-ci.yml  security-audit.yml
docs/: Project_Status_Report.md  Project_Status_Report_kr.md  QuickStart.md  QuickStart_kr.md  SAP_2.3_Specification.md  SAP_2.3_Specification_kr.md  SpaceAI_Arxiv_Paper.md  SpaceAI_Whitepaper.md
docs/integration/: ROS2_Bridge.md  ROS2_Bridge_kr.md  VDA5050_Mapping.md  VDA5050_Mapping_kr.md
docs/profiles/: DomainProfiles.md  DomainProfiles_kr.md
rust/: CHANGELOG.md  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
rust/.cargo/: config.toml
rust/crates/sap-bench/: Cargo.toml
rust/crates/sap-bench/benches/: edge_runtime.rs  simulation.rs
rust/crates/sap-bench/src/: lib.rs  utils.rs
rust/crates/sap-cloud/: Cargo.toml
rust/crates/sap-cloud/src/: lib.rs
rust/crates/sap-cloud/src/handoff/: mod.rs  protocol.rs
rust/crates/sap-cloud/src/state/: aggregator.rs  mod.rs
rust/crates/sap-cloud/src/vts/: allocator.rs  mod.rs
rust/crates/sap-core/: Cargo.toml
rust/crates/sap-core/src/: lib.rs
rust/crates/sap-core/src/crypto/: mod.rs  replay.rs  signature.rs
rust/crates/sap-core/src/error/: mod.rs
rust/crates/sap-core/src/packet/: delta_tick.rs  header.rs  mod.rs  rollback_frame.rs
rust/crates/sap-core/src/ticket/: bid.rs  mod.rs  transit_ticket.rs  voxel_time_slot.rs  vts_id.rs
rust/crates/sap-core/src/types/: acceleration.rs  mod.rs  position.rs  robot_state.rs  velocity.rs  world_state.rs
rust/crates/sap-core/src/util/: hash.rs  mod.rs  time.rs
rust/crates/sap-core/src/validation/: frame.rs  mod.rs  proof.rs  result.rs
rust/crates/sap-economy/: Cargo.toml
rust/crates/sap-economy/src/: lib.rs
rust/crates/sap-economy/src/auction/: mod.rs  vickrey.rs
rust/crates/sap-economy/src/pricing/: engine.rs  mod.rs
rust/crates/sap-economy/src/ticket/: manager.rs  mod.rs
rust/crates/sap-edge/: Cargo.toml
rust/crates/sap-edge/src/: lib.rs  runtime.rs
rust/crates/sap-examples/: Cargo.toml
rust/crates/sap-network/: Cargo.toml
rust/crates/sap-network/src/: lib.rs
rust/crates/sap-network/src/failsafe/: manager.rs  mod.rs
rust/crates/sap-network/src/rollback/: manager.rs  mod.rs
rust/crates/sap-network/src/sync/: comparator.rs  mod.rs
rust/crates/sap-physics/: Cargo.toml
rust/crates/sap-physics/src/: lib.rs
rust/crates/sap-physics/src/command/: command_gate.rs  mod.rs  motion_command.rs
rust/crates/sap-physics/src/constraint/: collision_predictor.rs  kinematics_checker.rs  mod.rs
rust/crates/sap-physics/src/kinematics/: mod.rs  profile.rs
rust/crates/sap-physics/src/recovery/: command.rs  mod.rs
rust/crates/sap-physics/src/validator/: config.rs  mod.rs  physics_validator.rs
rust/crates/sap-physvisor/: Cargo.toml
rust/crates/sap-physvisor/src/: lib.rs
rust/crates/sap-physvisor/src/registry/: mod.rs  robot_registry.rs
rust/crates/sap-physvisor/src/simulation/: engine.rs  mod.rs
rust/crates/sap-physvisor/src/zone/: manager.rs  mod.rs
rust/crates/sap-robot/: Cargo.toml
rust/crates/sap-robot/src/: lib.rs
rust/crates/sap-robot/src/command/: builder.rs  mod.rs
rust/crates/sap-robot/src/state/: manager.rs  mod.rs
rust/crates/sap-robot/src/ticket/: mod.rs  requester.rs
rust/examples/: warehouse_demo.rs
