[workspace]
resolver = "2"
members = [
    "crates/sap-core",
    "crates/sap-physics",
    "crates/sap-network",
    "crates/sap-economy",
    "crates/sap-edge",
    "crates/sap-robot",
    "crates/sap-physvisor",
    "crates/sap-cloud",
    "crates/sap-bench",
    "crates/sap-examples",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["SpaceAI Team"]
license = "MIT"
repository = "https://github.com/spaceai/sap"

[workspace.dependencies]
# 공통 의존성
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }

# 물리 엔진
rapier3d = { version = "0.17", features = ["simd-stable", "enhanced-determinism"] }

# ONNX 추론
tract-onnx = "0.20"

# WASM
wasmtime = "15.0"
wasm-bindgen = "0.2"

# 네트워크
quinn = "0.10"

# 유틸리티
rand = "0.8"
parking_lot = "0.12"

# 내부 크레이트
sap-core = { path = "crates/sap-core" }
sap-physics = { path = "crates/sap-physics" }
sap-network = { path = "crates/sap-network" }
sap-economy = { path = "crates/sap-economy" }
sap-edge = { path = "crates/sap-edge" }
sap-robot = { path = "crates/sap-robot" }
sap-physvisor = { path = "crates/sap-physvisor" }
sap-cloud = { path = "crates/sap-cloud" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
