[package]
name = "sap-economy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "SAP v1.2 Economy - L4 S-MEV 경제 엔진"

[dependencies]
sap-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[features]
default = ["std"]
std = []
